--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 ]
             },
             {
-                prompt: '"Please head to Adopt me support (playadopt.me/support) to report the user. Keep in mind that this will not get your pets back."',
+                prompt: '"While we are able to take action within the discord, we are unable to assist with this in-gamw as we are only Discord volunteers; please head on over to https://www.playadopt.me/support, where the Support Team can help you."',
                 responses: [
                     { text: 'Close the ticket', correct: false, incorrectFeedback: 'Incorrect! There is crucial information that the user has to read in order to get all of the appropriate information they need, and closing the ticket may mean they do not read it.', nextStage: 7 },
                     { text: 'Leave the ticket open', correct: false, incorrectFeedback: 'You should not leave a ticket open, as we dont want the queue to be filled up with completed tickets that simply havent been closed.', nextStage: 7 },
