--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 ]
             },
             {
-                prompt: '""',
+                prompt: '"Keep in mind that cross-trading is not permitted, and doing so can result in being moderated within the discord, and in-game."',
                 responses: [
                     { text: 'Close the ticket', correct: false, incorrectFeedback: 'Incorrect! There is crucial information that the user has to read in order to get all of the appropriate information they need, and closing the ticket may mean they do not read it.', nextStage: 7 },
                     { text: 'Leave the ticket open', correct: false, incorrectFeedback: 'You should not leave a ticket open, as we dont want the queue to be filled up with completed tickets that simply havent been closed.', nextStage: 7 },
